[gd_scene load_steps=4 format=3 uid="uid://b3qbspi0638wb"]

[ext_resource type="Texture2D" uid="uid://j05s8twj20p5" path="res://art/BB61_USS_Iowa_BB61_broadside_USN.jpg" id="1_37j6y"]
[ext_resource type="Script" path="res://scripts/multiplayer_lobby.gd" id="1_q33ix"]
[ext_resource type="AudioStream" uid="uid://weod45hnf2u1" path="res://audio/battleThemeA.mp3" id="3_qcfys"]

[node name="MultiplayerLobby" type="Node2D"]
script = ExtResource("1_q33ix")

[node name="Bb61UssIowaBb61BroadsideUsn" type="Sprite2D" parent="."]
position = Vector2(579, 242)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_37j6y")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="TitleLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -261.0
offset_right = 261.0
offset_bottom = 137.0
grow_horizontal = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 100
text = "Ship Battle"

[node name="Panel" type="Panel" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -228.0
offset_top = -133.5
offset_right = 228.0
offset_bottom = 133.5
grow_horizontal = 2
grow_vertical = 2

[node name="LobbyVBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -70.0
offset_top = -20.0
offset_right = 70.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="LobbyLabel" type="Label" parent="CanvasLayer/LobbyVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Multiplayer Lobby"

[node name="Player1Label" type="Label" parent="CanvasLayer/LobbyVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Player 1"

[node name="Player2Label" type="Label" parent="CanvasLayer/LobbyVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Player 2"

[node name="StartGameButton" type="Button" parent="CanvasLayer/LobbyVBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Start Game"

[node name="StatusLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -23.0
offset_right = 352.0
grow_vertical = 0
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
text = "Wait for other player to join... [Server started]"

[node name="PlayerStatusLabel" type="Label" parent="CanvasLayer"]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -142.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
text = "Player connected: 
Player 1"

[node name="Timer" type="Timer" parent="."]
wait_time = 8.0

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_qcfys")
bus = &"Music"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
